--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,2 +1,9 @@
 h1 {
   color: #333; }
+
+.card-text-edit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box; }
