--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -2,3 +2,11 @@
 h1 {
     color: $color-text;
 }
+
+.card-text-edit {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
