--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -1,12 +1,19 @@
-<h1>Home</h1>
-<p>Fuga faucibus, diam, assumenda pulvinar tenetur integer erat vel. Provident,
-    aperiam soluta perferendis recusandae, anim provident nulla blandit ipsa nec
-    luctus voluptatibus turpis odio, parturient posuere excepteur platea error
-    lectus class tempor pellentesque tincidunt sit pretium, expedita
-    necessitatibus error recusandae! Turpis maecenas, torquent exercitation
-    perspiciatis sodales dictumst donec, fuga ultricies libero vero illo
-    voluptas, officiis quaerat! Occaecat vel nesciunt lobortis, aperiam natoque
-    recusandae quos maiores! Viverra. Consectetur, ullamcorper qui platea,
-    iaculis? Adipiscing quos vs ad vehicula hic, netus porta, irure,
-    veniam quis congue. Aptent gravida, libero aptent corrupti aliquet explicabo
-    mattis minus massa suscipit litora quo adipisicing.</p>
+<div class="mt-4" style="overflow: hidden">
+    <div class="row">
+        {{#each Courses}}
+        <div class="col-sm-12 col-lg-4 mt-4">
+            <div class="card" style="width: 95%;margin:auto">
+                <img class="card-img-top" src="{{this.img}}" alt="{{this.description}}" 
+                style="object-fit: cover;
+                object-position: center;
+                height: 307px;">
+                <div class="card-body">
+                    <h5 class="card-title">{{this.name}}</h5>
+                    <p class="card-text card-text-edit">{{this.description}}</p>
+                    <a href="#" class="btn btn-primary">Buy Now</a>
+                </div>
+            </div> 
+        </div>
+        {{/each}}
+    </div>
+</div>
