--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -7,3 +7,8 @@ h1 {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   display: -webkit-box; }
+
+.user-avatar {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%; }
