--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -10,3 +10,9 @@ h1 {
     -webkit-box-orient: vertical;
     display: -webkit-box;
 }
+
+.user-avatar {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+}
