--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,45 +1,27 @@
-<nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-    <div class='container-fluid'>
-        <a class='navbar-brand' href='#'>Navbar</a>
-        <button
-            class='navbar-toggler'
-            type='button'
-            data-bs-toggle='collapse'
-            data-bs-target='#navbarSupportedContent'
-            aria-controls='navbarSupportedContent'
-            aria-expanded='false'
-            aria-label='Toggle navigation'
-        >
-            <span class='navbar-toggler-icon'></span>
-        </button>
-        <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-            <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
-                <li class='nav-item'>
-                    <a class='nav-link' aria-current='page' href='/'>Home</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <div class="container-fluid" style="display: flex;">
+            <a class="navbar-brand" href="/">
+            F8 Education</a>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" style="display: flex">
+            <ul class="navbar-nav mb-2 mb-lg-0" style="margin-left: auto">
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="/img/song3.webp" alt="" class="user-avatar">
+                    Phu Sang
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/course/create">Đăng Khóa Học</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a></li>
+                    <li><a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+                </ul>
                 </li>
-                <li class='nav-item'>
-                    <a class='nav-link' href='/news'>News</a>
-                </li>
-                <li class='nav-item'>
-                    <a class='nav-link' href='/search'>Search</a>
-                </li>
-                <li class='nav-item'>
-                    <a class='nav-link' href='/sang'>Sang</a>
-                </li>
-
             </ul>
-            <form class='d-flex'>
-                <input
-                    class='form-control me-2'
-                    type='search'
-                    placeholder='Search'
-                    aria-label='Search'
-                />
-                <button
-                    class='btn btn-outline-success'
-                    type='submit'
-                >Search</button>
-            </form>
+            </div>
         </div>
     </div>
 </nav>
