--- a/src/resource/views/course/create.hbs
+++ b/src/resource/views/course/create.hbs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-8" style="margin-left: auto;margin-right:auto">
             <h3>Tạo khóa học</h3>
-            <form method="post" action="/store">
+            <form method="post" action="/course/store">
                 <div class="form-group">
                     <label for="name">Tên khóa học</label>
                     <input type="text" class="form-control" id="name" name="name">
@@ -17,8 +17,8 @@
                 </div>
                
                 <div class="form-group">
-                    <label for="img">img</label>
-                    <input type="text" class="form-control" id="img" name="img">
+                    <label for="level">Trình độ chuyên môn</label>
+                    <input type="text" class="form-control" id="level" name="level">
                 </div>
                 <button type="submit" class="btn btn-primary mt-4">Create</button>
             </form>
