--- a/src/resource/views/course/edit.hbs
+++ b/src/resource/views/course/edit.hbs
@@ -1,10 +1,10 @@
 <div class="mt-4">
     <div class="row">
         <div class="col-lg-8" style="margin-left: auto;margin-right:auto">
-            <h3>Tạo khóa học</h3>
+            <h3>Chỉnh sửa khóa học</h3>
             <form method="POST" action="/course/{{course._id}}?_method=PUT">
                 <div class="form-group">
-                    <label for="name">Chỉnh sửa khóa học</label>
+                    <label for="name">Tên khóa học</label>
                     <input type="text" class="form-control" value="{{course.name}}" id="name" name="name">
                 </div>
                 <div class="form-group">
@@ -16,10 +16,10 @@
                     <input type="text" class="form-control" value="{{course.videoId}}" id="videoId" name="videoId">
                 </div>
                 <div class="form-group">
-                    <label for="img">img</label>
-                    <input type="text" class="form-control" value="{{course.img}}" id="img" name="img">
+                    <label for="level">Trình độ chuyên môn</label>
+                    <input type="text" class="form-control" value="{{course.level}}" id="level" name="level">
                 </div>
-                <button type="submit" class="btn btn-primary mt-4">Sửa</button>
+                <button type="submit" class="btn btn-primary mt-4">Lưu</button>
             </form>
         </div>
     </div>
