--- a/src/resource/views/course/home.hbs
+++ b/src/resource/views/course/home.hbs
@@ -4,7 +4,9 @@
         <div class="col-sm-12 col-lg-4 mt-4">
             <div class="card" style="width: 95%;margin:auto">
                 <a href="/course/{{this.slug}}">
-                    <img class="card-img-top" src="{{this.img}}" alt="{{this.description}}" 
+                    <img class="card-img-top" 
+                    src="https://img.youtube.com/vi/{{this.videoId}}/sddefault.jpg" 
+                    alt="{{this.description}}" 
                     style="object-fit: cover;
                     object-position: center;
                     height: 307px;">
