--- a/src/resource/views/me/me-courses.hbs
+++ b/src/resource/views/me/me-courses.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<form method="POST" action="/course/handleFormsAction" class="container">
     <div class="mt-4">
         <div style="display: flex;justify-content: space-between;">
             <div class="h3">
@@ -13,18 +13,38 @@
         <a href="/me/trash/course" style="text-decoration:none">
             Thùng rác {{count}}
         </a>
+        <div class="d-flex align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkAll">
+                <label class="form-check-label" for="checkAll" 
+                    style="webkit-user-select: none;-moz-user-select: none;user-select: none;">
+                    Chọn tất cả
+                </label>
+            </div>
+            <select class="form-select form-select-action" name="action" aria-label="Default select example" required>
+                <option value="">--Hành động--</option>
+                <option value="delete">Xóa</option>
+            </select>
+            <button type="submit" class="btn btn-primary disabled btn-action">Action</button>
+        </div>
+        
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">STT</th>
+                    <th scope="col" colspan="2">STT</th>
                     <th scope="col">Tên khóa học</th>
-                    <th scope="col">Trình độ</th>
-                    <th scope="col" colspan = 4>Thời gian tạo</th>
+                    <th scope="col" >Trình độ</th>
+                    <th scope="col" colspan = "4">Thời gian tạo</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each course}}
                     <tr>
+                        <td>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}" id="flexCheckDefault">
+                            </div>
+                        </td>
                         <th scope="row">{{sum @index 1}}</th>
                         <td>
                             <a style="text-decoration:none;color:rgb(51, 51, 144)" href="/course/{{this.slug}}">{{this.name}}</a>
@@ -45,7 +65,7 @@
             </tbody>
         </table>
     </div>
-</div>
+</form>
 
 
 <!-- Modal -->
@@ -69,11 +89,25 @@
   </div>
 </div>
 <form method="POST" name="delete-course-form" ></form>
+
+
+
 <script>
     document.addEventListener("DOMContentLoaded",function(){
         var courseId;
         var formDelete = document.forms['delete-course-form'];
-        var btnDeleteCourse = document.getElementById('btn-delete');
+        var btnDeleteCourse = document.getElementById('btn-delete'); 
+        var checkItemCourseBtn = $('input[name="courseIds[]"]');
+        var checkAllBtn = $('#checkAll');
+        var btnAction = $('.btn-action');
+        function renderStatusAction(){
+            if ($('input[name="courseIds[]"]:checked').length > 0){
+                btnAction.removeClass('disabled');
+            } else {
+                btnAction.addClass('disabled');
+            }
+        }
+
         $('#delete-course').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget) 
             courseId = button.data('id') 
@@ -82,5 +116,14 @@
             formDelete.action = "/course/" + courseId + "?_method=DELETE";
             formDelete.submit()
         }
+        checkAllBtn.change(function(){
+            checkItemCourseBtn.prop('checked',checkAllBtn.prop('checked'))
+            renderStatusAction();
+        });
+        checkItemCourseBtn.change(function(){
+            var isCheckAll =  checkItemCourseBtn.length === $('input[name="courseIds[]"]:checked').length;
+            checkAllBtn.prop('checked',isCheckAll);
+            renderStatusAction();
+        });
     })
 </script>
