--- a/src/resource/views/me/trash-courses.hbs
+++ b/src/resource/views/me/trash-courses.hbs
@@ -1,8 +1,23 @@
-<div class="container">
+<form method="POST" action="/course/handleFormsAction" class="container">
     <div class="mt-4">
         <a href="/me/stored/courses">Quay lại</a>
         <div class="h3">
             Thùng rác
+        </div>
+        <div class="d-flex align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkAll">
+                <label class="form-check-label" for="checkAll" 
+                    style="webkit-user-select: none;-moz-user-select: none;user-select: none;">
+                    Chọn tất cả
+                </label>
+            </div>
+            <select class="form-select form-select-action" name="action" aria-label="Default select example" required>
+                <option value="">--Hành động--</option>
+                <option value="restore">Khôi phục</option>
+                <option value="deletePermanently">Xóa vĩnh viễn</option>
+            </select>
+            <button type="submit" class="btn btn-primary disabled btn-action">Action</button>
         </div>
         <table class="table">
             <thead>
@@ -15,6 +30,11 @@
             <tbody>
                 {{#each course}}
                     <tr>
+                        <td>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}" id="flexCheckDefault">
+                            </div>
+                        </td>
                         <th scope="row">{{sum @index 1}}</th>
                         <td>{{this.name}}</td>
                         <td>{{this.deletedAt}}</td>
@@ -32,7 +52,7 @@
             </tbody>
         </table>
     </div>
-</div>
+</form>
 
 
 <!-- Modal -->
@@ -62,9 +82,19 @@
         var courseId;
         var formDelete = document.forms['delete-course-form'];
         var btnDeleteCourse = document.getElementById('btn-delete');
-
         var formRestore = document.forms['restore-course-form'];
         var btnRestore = $('.btn-restore');
+
+        var checkItemCourseBtn = $('input[name="courseIds[]"]');
+        var checkAllBtn = $('#checkAll');
+        var btnAction = $('.btn-action');
+        function renderStatusAction(){
+            if ($('input[name="courseIds[]"]:checked').length > 0){
+                btnAction.removeClass('disabled');
+            } else {
+                btnAction.addClass('disabled');
+            }
+        }
 
         $('#delete-course').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget) 
@@ -74,12 +104,21 @@
             formDelete.action = "/course/" + courseId +"/force" + "?_method=DELETE";
             formDelete.submit()
         }
-
         btnRestore.click(function(e){
             e.preventDefault()
             courseId = $(this).data('id');
             formDelete.action = "/course/" + courseId + "/restore" + "?_method=PATCH";
             formDelete.submit()
         })
+
+        checkAllBtn.change(function(){
+            checkItemCourseBtn.prop('checked',checkAllBtn.prop('checked'))
+            renderStatusAction();
+        });
+        checkItemCourseBtn.change(function(){
+            var isCheckAll =  checkItemCourseBtn.length === $('input[name="courseIds[]"]:checked').length;
+            checkAllBtn.prop('checked',isCheckAll);
+            renderStatusAction();
+        });
     })
 </script>
