--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -8,6 +8,13 @@ h1 {
   -webkit-box-orient: vertical;
   display: -webkit-box; }
 
+.card-title-edit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  display: -webkit-box; }
+
 .user-avatar {
   width: 24px;
   height: 24px;
