--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -11,6 +11,14 @@ h1 {
     display: -webkit-box;
 }
 
+.card-title-edit {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
+
 .user-avatar {
     width: 24px;
     height: 24px;
