--- a/src/resource/views/course/home.hbs
+++ b/src/resource/views/course/home.hbs
@@ -13,7 +13,7 @@
                 </a>
                 <div class="card-body">
                     <a href="/course/{{this.slug}}" style="text-decoration: none; color:#333">
-                        <h5 class="card-title">{{this.name}}</h5>
+                        <h5 class="card-title card-title-edit">{{this.name}}</h5>
                     </a>
                     <p class="card-text card-text-edit">{{this.description}}</p>
                     <a href="#" class="btn btn-primary">Buy Now</a>
