--- a/src/resource/views/me/me-courses.hbs
+++ b/src/resource/views/me/me-courses.hbs
@@ -25,16 +25,30 @@
                 <option value="">--Hành động--</option>
                 <option value="delete">Xóa</option>
             </select>
-            <button type="submit" class="btn btn-primary disabled btn-action">Action</button>
+            <button type="submit" class="btn btn-primary btn-action" disabled>Action</button>
         </div>
         
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col" colspan="2">STT</th>
-                    <th scope="col">Tên khóa học</th>
-                    <th scope="col" >Trình độ</th>
-                    <th scope="col" colspan = "4">Thời gian tạo</th>
+                    <th scope="col" colspan="2">
+                        STT
+                        {{{sortable '_id' _sort}}}
+                    </th>
+                    <th scope="col">
+                        Tên khóa học
+                        {{{sortable 'name' _sort}}}
+                    </th>
+                    <th scope="col" >
+                        Trình độ
+                        {{{sortable 'level' _sort}}}
+                      
+                    </th>
+                    <th scope="col" colspan = "4">
+                        Thời gian tạo
+                        {{{sortable 'createdAt' _sort}}}
+                      
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -45,7 +59,7 @@
                                 <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}" id="flexCheckDefault">
                             </div>
                         </td>
-                        <th scope="row">{{sum @index 1}}</th>
+                        <th scope="row">{{this._id}}</th>
                         <td>
                             <a style="text-decoration:none;color:rgb(51, 51, 144)" href="/course/{{this.slug}}">{{this.name}}</a>
                         </td>
@@ -102,9 +116,9 @@
         var btnAction = $('.btn-action');
         function renderStatusAction(){
             if ($('input[name="courseIds[]"]:checked').length > 0){
-                btnAction.removeClass('disabled');
+                btnAction.attr('disabled',false);
             } else {
-                btnAction.addClass('disabled');
+                btnAction.attr('disabled',true);
             }
         }
 
